--- a/index.Rmd
+++ b/index.Rmd
@@ -27,12 +27,13 @@ Paragraph or two introducing your datasets and variables, why they are interesti
 
 ```{R}
 library(tidyverse)
-install.packages("xlsx")
+library(kableExtra)
+library(knitr)
+##install.packages("xlsx",repos = "http://cran.us.r-project.org")
 library(xlsx)
-homeless <- read_xlsx("~/project1/Homelessness.xlsx")
-manufacturing <- read_xlsx("~/project1/Manufacturing_Stats_by_State.xlsx")
+manufacturing <- read.xlsx("~/project1/Manufacturing_Stats_by_State.xlsx", sheetIndex = 1)
 
-homeless_big <- lapply(1:10, function(i) read_excel("~/project1/Homelessness.xlsx", sheet = i))
+homeless_big <- lapply(1:10, function(i){read.xlsx("~/project1/Homelessness.xlsx", sheetIndex = i)})
 
 
 ```
@@ -72,7 +73,7 @@ homeless %>% separate(col = "CoC.Number", sep = "-", into = c("State_Abbrev.", N
 #4.) I now want to change the state names in my manufacturing dataframe into
 #their respective abbreviations so that I'll be able to merge my homeless_tidy 
 #and the resulting manufacturing_tidy dataframes.
-manufacturing %>% rename(State_Abbrev. = `Geographic area name`) -> manufacturing
+manufacturing %>% rename(State_Abbrev. = Geographic.area.name) -> manufacturing
 manufacturing %>% mutate(State_Abbrev. = state.abb[match(State_Abbrev., state.name)]) %>%
   na.omit -> manufacturing
 
@@ -85,7 +86,7 @@ manufacturing %>% select(c(1:5, (seq(7, 21, 2)))) %>% mutate_at(5:13, as.numeric
 
 #6.) Now, since the individual type of manufacturing is not important to me,
 #I want to combine the observations by state and year for number of workers.
-manufacturing %>% group_by(State_Abbrev., Year) %>% summarize(Num_Workers = sum(`Number of employees`)) -> manufacturing_tidy
+manufacturing %>% group_by(State_Abbrev., Year) %>% summarize(Num_Workers = sum(Number.of.employees)) -> manufacturing_tidy
 
 
 ```
@@ -112,9 +113,9 @@ combined_data2 %>% mutate_at("Year", as.factor) -> combined_data2
 dim(combined_data2)
 ```
 The tidy manufacturing dataset contains 100 observations with three variables.
-The homeless dataset contains 2805 observations with four variables. 
+The homeless dataset contains 2856 observations with four variables. 
 I have inner joined the datasets by their year and state. The resulting dataset
-contains 2650 observations, each with 4 variables. Though each data set had the
+contains 2650 observations, each with 4 variables. Though each individual data set had the
 same values for the "Year" variable, the "State_Abbrev." variable in the homeless
 dataset had five more possible values: The District of Columbia, the Virgin Islands,
 Puerto Rico, Guam, and NA. The remaining common values are the 50 states of 
@@ -157,6 +158,21 @@ combined_data2 %>% group_by(Population_Type) %>% count
 combined_data2 %>% group_by(State_Abbrev.) %>% count
 combined_data2 %>% group_by(Year) %>% count
 
+#What was the total change in workers in America between 2014 and 2015?
+sum((combined_data2 %>% group_by(State_Abbrev., Population_Type) %>% 
+  filter(Population_Type == "Total.Homeless" |Population_Type == "Workers")%>% 
+  summarize(change = changer(Population)) %>% na.omit %>% 
+  group_by(State_Abbrev.) %>% mutate(Homeless_Worker_Change_Diff = changer(change)) %>% 
+  arrange(desc(Homeless_Worker_Change_Diff)) %>% filter(Population_Type == "Workers"))$change)
+
+#What was the total change in homeless in America between 2014 and 2015?
+sum((combined_data2 %>% group_by(State_Abbrev., Population_Type) %>% 
+  filter(Population_Type == "Total.Homeless" |Population_Type == "Workers")%>% 
+  summarize(change = changer(Population)) %>% na.omit %>% 
+  group_by(State_Abbrev.) %>% mutate(Homeless_Worker_Change_Diff = changer(change)) %>% 
+  arrange(desc(Homeless_Worker_Change_Diff)) %>% filter(Population_Type == "Total.Homeless"))$change)
+
+
 #What is the five number summary of the number of workers per state?
 fivenum(((combined_data2 %>% filter(Population_Type == "Workers")) $ Population))
 
@@ -166,10 +182,10 @@ combined_data %>% group_by(State_Abbrev.) %>% filter(str_detect(Population_Type,
 ```
 I have found that Indiana has the highest proportion of factory workers to 
 homeless. California has the highest chronically homeless population at 32174, while 
-Delaware has the lowest, at only 80. Connecticut had the highest net movement
-towards factory workers, with 403 less homeless and 118032 more factory workers
+Delaware has the lowest, at only 80. Georgia had the highest net movement
+towards factory workers, with 2731 less homeless and 18266 more factory workers
 between 2014 and 2015. I found that the total mean homeless population in America
-is 11134 homeless, and that the median number of factory workers is 415101. Interestingly,
+is 11134 homeless, and that the median number of factory workers is 299196. Interestingly,
 Montana has the highest number of unsheltered homeless parenting youth under 18, 
 at 2. 
 The most interesting finding here is that it seems, in general, the amount of homelessness dropped
@@ -199,16 +215,19 @@ The plot above visualizes the differences in the total homeless population per
 state in 2014. 
 
 ```{R}
+maximum = max((combined_data2 %>% filter(Population_Type == "Workers", Year == 2015))$Population)
+minimum = min((combined_data2 %>% filter(Population_Type == "Workers", Year == 2015))$Population)
+
 combined_data2 %>% filter(Population_Type == "Workers", Year == 2015) %>% 
   ggplot(aes(x = State_Abbrev., y = Population)) + geom_bar(stat = "identity", aes(fill = State_Abbrev.)) +
   labs(title = "Total Factory Worker Population by State in 2015", x = "State", y = "Population") +
   scale_y_log10() +
   theme_dark() +
   theme(legend.position = "None", axis.text.x = element_text(angle = 90, hjust = 1, size = 10)) +
-  geom_hline(yintercept = max((combined_data2 %>% filter(Population_Type == "Workers", Year == 2015))$Population)) +
-  geom_hline(yintercept = min((combined_data2 %>% filter(Population_Type == "Workers", Year == 2015))$Population)) +
-  annotate("text", 45, 5000000, label = "Max: 3343180 in CA") +
-  annotate("text", 45, 500, label = "Min: 1039 in AK")
+  geom_hline(yintercept = maximum) +
+  geom_hline(yintercept = minimum) +
+  annotate("text", 45, 5000000, label = paste("Max:" , as.character(maximum) , "in CA")) +
+  annotate("text", 45, 500, label = paste("Min:", as.character(minimum),"in AK"))
 ```
 
 This plot visualizes the number of workers in manufacturing per state in 2015.
@@ -227,12 +246,12 @@ combined_data2 %>% filter(Population_Type == "Sheltered.Homeless" | Population_T
   geom_smooth(method = "lm", se = F) +
   labs(title = "Factory Workers Against Sheltered Homeless Population by State", x = "Sheltered Homeless Population", y = "Factory Worker Population")
  
-  ?annotation_logticks
 
 ```
 
 This is a plot comparing the factory worker population in each state to that 
-state's sheltered homeless population. It appears that the two variables are positiviely correlated.
+state's sheltered homeless population. It appears that the two variables have a
+slight negative correlation.
 
 #### Concluding Remarks
 
